--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -1,152 +1,631 @@
-.card {
-  border: none;
-}
-.header {
-  font-family: "Cabin", sans-serif;
-  font-size: 6.5rem;
-  font-weight: 700;
-  margin-top: 9.2rem;
-}
+// Responsiveness
+// mobile size
+@media (min-width: 320px) and (max-width: 499px) {
+  // Header Image
+  section.header-image-partner {
+    min-height: 60vh;
+    background: url("../imgs/Partners/partnerheader.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 
-.header-text {
-  font-family: "Cabin", sans-serif;
-  font-size: 3rem;
-  font-weight: 400;
-  margin: 2.8rem 9.5rem 11.3rem 9.5rem;
-}
-// ORANGE BUTTON
-.learn-how-partners {
-  padding: 0.5rem 3.5rem;
-  margin-top: -2rem;
-  background: #ff7c5c;
-  border: 0rem solid white;
-  color: white;
-  font-size: 2rem;
-  font-weight: 600;
-  border-radius: 4.3rem;
-  font-family: "Cabin", sans-serif;
-}
-// Quote Block
-.quote {
-  color: #024a63;
-  margin-top: 3.7rem;
-  margin-bottom: 4.8rem;
-  font-family: "Cabin", sans-serif;
-  font-size: 4rem;
-  font-weight: 700;
-  padding-left: 11rem;
-  padding-right: 11rem;
-}
-
-// Repeating h1,h2
-.repeating-h1 {
-  color: #024a63;
-  font-family: "Cabin", sans-serif;
-  font-size: 4.5rem;
-  font-weight: 700;
-  margin-top: 4rem;
-}
-.repeating-h2 {
-  color: #024a63;
-  font-family: "Cabin", sans-serif;
-  font-size: 2.4rem;
-  font-weight: normal;
-  margin: 1.6rem 25rem 1rem 25rem;
-  line-height: 3.5rem;
-}
-
-// Grid carousel
-
-.slide {
-  padding-top: 6rem;
-  padding-bottom: 3rem;
-  margin-left: 10%;
-  margin-right: 10%;
-  position: relative;
-}
-.card-title {
-  font-family: "Cabin", sans-serif;
-  font-size: 3.5rem;
-  font-weight: 600;
-  margin-left: 2.4rem;
-  margin-right: 2.4rem;
-}
-
-.card-text {
-  font-family: "Raleway", sans-serif;
-  font-size: 2rem;
-  font-weight: 400;
-  padding-bottom: 1rem;
-}
-
-.bi-arrow-right-circle {
-  position: absolute;
-  font-size: 3.6rem;
-  top: 6rem;
-  right: 0rem;
-  color: black;
-}
-.bi-arrow-left-circle {
-  position: absolute;
-  font-size: 3.6rem;
-  top: 6rem;
-  left: 0rem;
-  color: black;
-}
-.filled-circle {
-  border-radius: 100%;
-  width: 1.2rem !important;
-  height: 1.2rem !important;
-}
-
-// Circle Carousels
-
-.rounded-circle {
-  width: 35.8rem;
-  height: 35.8rem;
-  padding: 3.5rem;
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-  margin-top: 4.8rem;
-  background-color: #e2f0ef !important;
-}
-
-// Drop Downs
-.accordion-partners {
-  .accordion-body {
-    background-color: #e2f0ef;
-    margin-top: -4rem;
-    width: 32.4rem;
-    border-radius: 0rem 0rem 4.3rem 4.3rem;
+    p.header {
+      font-size: 4rem;
+      font-weight: 700;
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+      line-height: 4.5rem;
+    }
+    p.header-text {
+      font-size: 2rem;
+      font-weight: 400;
+      margin-left: 2rem;
+      margin-right: 2rem;
+      margin-top: 0rem;
+      margin-bottom: 1rem;
+    }
   }
-  .text-accordion {
-    background-color: #e2f0ef;
-    font-family: "Raleway", sans-serif;
-    font-size: 2.3rem;
-    font-weight: 500;
-    padding-top: 4rem;
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
+  // Learn how button
+  button.learn-how-partners {
+    font-size: 1.8rem;
+    height: 4.4rem;
+    margin-top: -2rem;
   }
-
-  .button-accordion {
+  h3.quote {
+    font-size: 1.8rem;
+    margin-top: 2.7rem;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  // Repeating h1 & 2
+  h1.repeating-h1 {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-top: 2rem;
+  }
+  h2.repeating-h2 {
+    font-size: 1.4rem;
+    font-weight: normal;
+    margin-top: 0.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    line-height: 2rem;
+  }
+  // Grid Carousel Inner
+  h5.partner-card-title {
     font-family: "Cabin", sans-serif;
-    font-size: 2.5rem;
+    font-size: 1.8rem;
     font-weight: 600;
-    background-color: #024a63;
-    margin-top: 2.4rem;
-    border: none;
-    border-radius: 4.3rem;
+    line-height: 2.4rem;
+    margin-left: 0.15rem;
+    margin-right: 0.15rem;
+  }
+  p.partner-card-text {
+    display: none;
+    // font-size: 1.4rem;
+    // line-height: 1.6rem;
+    // padding-bottom: 0rem;
+  }
+  // Carousel Controls
+  button.filled-circle {
+    display: none;
+  }
+  button.carousel-control-next {
+    float: right;
+    position: relative;
+    display: inline;
+    margin-bottom: 2rem;
+    .bi-arrow-right-circle {
+      top: -1rem;
+    }
+  }
+  button.carousel-control-prev {
+    position: relative;
+    display: inline;
+    .bi-arrow-left-circle {
+      top: -1rem;
+    }
+  }
+  .slide {
+    padding-top: 1rem !important;
+    padding-bottom: 0rem;
+  }
+  // Carousel touch points
+  .carousel-control-next {
+    height: 5rem;
+  }
+  .carousel-control-prev {
+    height: 5rem;
+  }
+  // Circle Carousel
+  // Cards w image
+  div.rounded-circle {
+    position: relative;
+    width: 16rem;
+    height: 16rem;
+    padding: 1.6rem;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    margin-top: 2rem;
+    background-color: #e2f0ef !important;
+  }
+
+  // Accordions
+  .accordion-partners {
+    div.accordion-body {
+      margin-top: -4rem;
+      width: 24rem;
+      border-radius: 0rem 0rem 4.3rem 4.3rem;
+    }
+    p.text-accordion {
+      font-size: 1.4rem;
+      font-weight: 500;
+      padding-top: 4rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+    h2.accordion-header {
+      .button-accordion {
+        font-size: 1.8rem;
+        margin-top: 1rem;
+        border: none;
+        border-radius: 4.3rem;
+        color: white;
+        height: 5rem;
+        width: 24rem;
+        line-height: 2.1rem;
+      }
+
+      i.plus-icon-partners {
+        position: absolute;
+        top: 1.5rem;
+        right: 1rem;
+        font-size: 1.8rem;
+      }
+    }
+  }
+  #circleCarousel {
+    .carousel-control-prev {
+      i.left-arrow-bottom-circles {
+        margin-top: 2rem;
+        margin-left: 1rem;
+      }
+    }
+    .carousel-control-next {
+      i.right-arrow-bottom-circles {
+        margin-top: 2rem;
+        margin-right: 1rem;
+      }
+    }
+  }
+}
+
+@media (min-width: 500px) and (max-width: 767px) {
+  section.header-image-partner {
+    p.header {
+      font-size: 5rem;
+      margin-top: 8rem;
+      margin-bottom: 2rem;
+    }
+    p.header-text {
+      font-size: 2.8rem;
+      margin-left: 3rem;
+      margin-right: 3rem;
+      margin-top: 0rem;
+      margin-bottom: 1rem;
+    }
+  }
+  h3.quote {
+    font-size: 2.6rem;
+    margin-top: 2.7rem;
+    margin-bottom: 2rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+  h1.repeating-h1 {
+    font-size: 3.4rem;
+    font-weight: 700;
+    margin-top: 2rem;
+  }
+  h2.repeating-h2 {
+    font-size: 2.4rem;
+    font-weight: normal;
+    margin-top: 0.5rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
+    line-height: 3rem;
+  }
+  button.carousel-control-next {
+    float: right;
+    position: relative;
+    display: inline;
+    margin-bottom: 2rem;
+    .bi-arrow-right-circle {
+      top: -1rem;
+    }
+  }
+  button.carousel-control-prev {
+    position: relative;
+    display: inline;
+    float: left;
+    .bi-arrow-left-circle {
+      top: -1rem;
+    }
+  }
+  h5.partner-card-title {
+    font-size: 2.4rem;
+    line-height: 3rem;
+    margin-left: 0.15rem;
+    margin-right: 0.15rem;
+  }
+  p.partner-card-text {
+    font-family: "Raleway", sans-serif;
+    display: block;
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+  #circleCarousel {
+    margin-bottom: 3rem;
+    div.rounded-circle {
+      position: relative;
+      width: 20rem;
+      height: 20rem;
+      padding: 2rem;
+      margin-left: 2.5rem;
+      margin-right: 2.5rem;
+      margin-top: 2rem;
+      background-color: #e2f0ef !important;
+    }
+  }
+}
+
+// Tablet
+@media (min-width: 768px) and (max-width: 1023px) {
+  // Header Image
+  section.header-image-partner {
+    p.header {
+      font-size: 5rem;
+      margin-top: 15rem;
+      margin-bottom: 2rem;
+    }
+
+    p.header-text {
+      font-size: 2.8rem;
+      margin-left: 3rem;
+      margin-right: 3rem;
+      margin-top: 0rem;
+      margin-bottom: 1rem;
+    }
+  }
+  // Learn how button
+  button.learn-how-partners {
+    font-size: 2rem;
+    height: 5rem;
+    margin-top: -2.5rem;
+  }
+  h3.quote {
+    font-size: 2.6rem;
+    margin-top: 2.7rem;
+    margin-bottom: 2rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+  // Repeating h1 & 2
+  h1.repeating-h1 {
+    font-size: 3.4rem;
+    font-weight: 700;
+    margin-top: 2rem;
+  }
+  h2.repeating-h2 {
+    font-size: 2.4rem;
+    font-weight: normal;
+    margin-top: 0.5rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
+    line-height: 3rem;
+  }
+  // Grid Carousel Inner
+  h5.partner-card-title {
+    font-size: 2.4rem;
+    line-height: 3rem;
+    margin-left: 0.15rem;
+    margin-right: 0.15rem;
+  }
+  p.partner-card-text {
+    font-family: "Raleway", sans-serif;
+    display: block;
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+  // Carousel Controls
+  button.filled-circle {
+    display: none;
+  }
+
+  // Carousel touch points
+  #gridCarousel {
+    button.carousel-control-next {
+      float: right;
+      position: relative;
+      display: inline;
+      margin-bottom: 2rem;
+      .bi-arrow-right-circle {
+        top: -3rem;
+      }
+    }
+    button.carousel-control-prev {
+      position: relative;
+      display: inline;
+      float: left;
+      .bi-arrow-left-circle {
+        top: -3rem;
+      }
+    }
+  }
+  // Circle Carousel
+  #circleCarousel {
+    margin-bottom: 4rem;
+    button.carousel-control-next {
+      float: right;
+      position: relative;
+      display: inline;
+      margin-bottom: 2rem;
+      .bi-arrow-right-circle {
+        top: 0.5rem;
+      }
+    }
+    button.carousel-control-prev {
+      position: relative;
+      display: inline;
+      float: left;
+      .bi-arrow-left-circle {
+        top: 0.5rem;
+      }
+    }
+    // Cards w image
+    div.rounded-circle {
+      position: relative;
+      width: 18rem;
+      height: 18rem;
+      padding: 1.8rem;
+      margin-left: 2.5rem;
+      margin-right: 2.5rem;
+      margin-top: 0rem;
+      background-color: #e2f0ef !important;
+    }
+
+    // Accordions
+    .accordion-partners {
+      div.accordion-body {
+        margin-top: -3rem;
+        width: 19rem;
+      }
+      p.text-accordion {
+        font-size: 1.4rem;
+        font-weight: 500;
+        padding-top: 4rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+      h2.accordion-header {
+        button.button-accordion {
+          font-size: 1.6rem;
+          margin-top: 1rem;
+          height: 5rem;
+          width: 19rem;
+          line-height: 2.2rem;
+          margin-left: 0rem;
+        }
+
+        i.plus-icon-partners {
+          position: absolute;
+          top: 1.5rem;
+          right: 1rem;
+          font-size: 1.8rem;
+        }
+      }
+    }
+  }
+}
+// large tablet/small desktop
+@media (min-width: 1024px) and (max-width: 1279px) {
+  section.header-image-partner {
+    min-height: 40vw;
+    p.header {
+      font-size: 6rem;
+      margin-bottom: 1rem;
+    }
+    p.header-text {
+      font-size: 3rem;
+      margin: 2rem 9.5rem 11.3rem 9.5rem;
+    }
+  }
+  h2.repeating-h2 {
+    margin-left: 10rem;
+    margin-right: 10rem;
+    line-height: 3.4rem;
+  }
+  h5.partner-card-title {
+    font-size: 3.5rem;
+    line-height: 4.2rem;
+    margin-bottom: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  p.partner-card-text {
+    display: contents;
+    font-family: "Raleway", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+    padding-bottom: 1rem;
+  }
+  .carousel-indicators {
+    .filled-circle {
+      display: block;
+      border-radius: 100%;
+      width: 1.2rem !important;
+      height: 1.2rem !important;
+      background-color: gray !important;
+    }
+    .filled-circle.active {
+      display: block;
+      background-color: #024a63 !important;
+    }
+  }
+}
+
+// Desktop
+@media (min-width: 1280px) {
+  section.header-image-partner {
+    min-height: 60vh;
+    background: url("../imgs/Partners/partnerheader.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    p.header {
+      font-family: "Cabin", sans-serif;
+      font-size: 6.5rem;
+      font-weight: 700;
+      margin-top: 9.2rem;
+    }
+
+    p.header-text {
+      font-family: "Cabin", sans-serif;
+      font-size: 3rem;
+      font-weight: 400;
+      margin: 2.8rem 9.5rem 11.3rem 9.5rem;
+    }
+  }
+
+  // ORANGE BUTTON
+  button.learn-how-partners {
+    padding: 0.5rem 3.5rem;
+    margin-top: -2rem;
+    background: #ff7c5c;
+    border: 0rem solid white;
     color: white;
-    height: 7.4rem;
-    width: 32.4rem;
+    font-size: 2rem;
+    font-weight: 600;
+    border-radius: 4.3rem;
+    font-family: "Cabin", sans-serif;
+    cursor: pointer;
+    z-index: 1;
+  }
+  // Quote Block
+  h3.quote {
+    color: #024a63;
+    margin-top: 3.5rem;
+    margin-bottom: 4.8rem;
+    font-family: "Cabin", sans-serif;
+    font-size: 4rem;
+    font-weight: 700;
+  }
+
+  // Repeating h1,h2
+  h1.repeating-h1 {
+    color: #024a63;
+    font-family: "Cabin", sans-serif;
+    font-size: 4.5rem;
+    font-weight: 700;
+    margin-top: 4rem;
+  }
+  h2.repeating-h2 {
+    color: #024a63;
+    font-family: "Cabin", sans-serif;
+    font-size: 2.4rem;
+    font-weight: normal;
+    margin-top: 1.6rem;
+    margin-bottom: 1rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    line-height: 3.5rem;
+  }
+
+  // Grid carousel
+
+  .slide {
+    padding-top: 6rem;
+    padding-bottom: 3rem;
+    margin-left: 10%;
+    margin-right: 10%;
     position: relative;
   }
 
-  .plus-icon-partners {
-    position: absolute;
-    right: 1.6rem;
-    top: 2.4rem;
-    font-size: 2.4rem;
+  h5.partner-card-title {
+    font-family: "Cabin", sans-serif;
+    font-size: 3.5rem;
+    font-weight: 600;
+    line-height: 4rem;
+    margin-bottom: 1rem;
+    margin-left: 2.4rem;
+    margin-right: 2.4rem;
+  }
+  .partner-card-text {
+    display: contents;
+    font-family: "Raleway", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+  }
+
+  button.carousel-control-next {
+    width: 50%;
+    height: 5rem;
+    float: right;
+    position: relative;
+    display: inline;
+    .bi-arrow-right-circle {
+      font-size: 3.6rem;
+      color: black;
+      top: 0;
+    }
+  }
+  button.carousel-control-prev {
+    width: 50%;
+    height: 5rem;
+    position: relative;
+    display: inline;
+    .bi-arrow-left-circle {
+      font-size: 3.6rem;
+      top: 0;
+      color: black;
+    }
+  }
+  .carousel-indicators {
+    .filled-circle {
+      display: block;
+      border-radius: 100%;
+      width: 1.2rem !important;
+      height: 1.2rem !important;
+      background-color: gray !important;
+    }
+    .filled-circle.active {
+      display: block;
+      background-color: #024a63 !important;
+    }
+  }
+
+  // Circle Carousels
+  #circleCarousel {
+    i.left-arrow-bottom-circles {
+      margin-top: 2rem;
+      margin-left: 2.5rem;
+    }
+    i.right-arrow-bottom-circles {
+      margin-top: 2rem;
+      margin-right: 2.5rem;
+    }
+  }
+  div.rounded-circle {
+    width: 35.8rem;
+    height: 35.8rem;
+    padding: 3.5rem;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    margin-top: 4.8rem;
+    background-color: #e2f0ef !important;
+  }
+
+  // Drop Downs
+  .accordion-partners {
+    div.accordion-body {
+      background-color: #e2f0ef;
+      margin-top: -4rem;
+      width: 32.4rem;
+      border-radius: 0rem 0rem 4.3rem 4.3rem;
+    }
+    p.text-accordion {
+      background-color: #e2f0ef;
+      font-family: "Raleway", sans-serif;
+      font-size: 2rem;
+      font-weight: 500;
+      padding-top: 4rem;
+      padding-left: 1.6rem;
+      padding-right: 1.6rem;
+    }
+    h2.accordion-header {
+      button.button-accordion {
+        font-family: "Cabin", sans-serif;
+        font-size: 2.4rem;
+        line-height: 2.6rem;
+        font-weight: 600;
+        background-color: #024a63;
+        height: 7.4rem;
+        width: 32.4rem;
+        margin-top: 2.4rem;
+        border: none;
+        border-radius: 4.3rem;
+        color: white;
+        position: relative;
+      }
+
+      i.plus-icon-partners {
+        position: absolute;
+        top: 2.4rem;
+        font-size: 2.4rem;
+      }
+    }
   }
 }
