--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -99,9 +99,16 @@ nav ul {
   width: 75%;
   height: 217px;
   border-radius: 5.8rem;
-  margin-left: 12%;
-  margin-right: 12%;
+  margin: auto;
   margin-top: 3rem;
+}
+
+.header-image-home {
+  min-height: 60vh;
+  background: url("../imgs/iggy.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .learn-how {
@@ -114,12 +121,18 @@ nav ul {
   font-weight: 400;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
+  z-index: 1;
+}
+
+.play-icon {
+  font-size: 80px;
 }
 
 .oceaneers-cabin-large {
   font-family: "Cabin", sans-serif;
   font-weight: 700;
   font-size: 6.5rem;
+  margin-top: 15rem;
 }
 
 .oceaneers-cabin-small {
@@ -301,6 +314,111 @@ nav ul {
   font-family: "Cabin", sans-serif;
 }
 
+@media (max-width: 540px) {
+  .learn-how {
+    padding: 0.5rem 2rem;
+    margin-top: -1.8rem;
+    font-size: 1.4rem;
+  }
+  .homepage-color {
+    width: 80%;
+  }
+  .oceaneers-cabin-large {
+    font-weight: 700;
+    font-size: 4rem;
+    margin-top: 18rem;
+  }
+  .oceaneers-cabin-small {
+    font-weight: 400;
+    font-size: 2rem;
+  }
+  .play-icon {
+    font-size: 80px;
+  }
+  .oceaneers-cabin {
+    font-weight: 700;
+    font-size: 2.8rem;
+  }
+  .oceaneers-raleway {
+    font-size: 1.4rem;
+    margin-top: 1.5rem;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+  .our-purpose {
+    font-weight: 700;
+    margin-top: 5rem;
+    font-size: 3rem;
+  }
+  .our-purpose-text {
+    margin-top: 7rem;
+    font-size: 2rem;
+    margin-top: 1.5%;
+  }
+  .our-pillers-text {
+    font-weight: 700;
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 3%;
+  }
+  .accordion-home {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .accordion-body-title {
+    font-size: 1.8rem;
+    margin-top: -2rem;
+  }
+  .accordion-body-home {
+    font-size: 1.6rem;
+    margin-top: -2.2rem;
+  }
+  .button-accordion-home {
+    font-size: 2rem;
+    border-radius: 4.3rem;
+    height: 4rem;
+  }
+  .plus-icon {
+    font-size: 2.4rem;
+    right: 1.3rem;
+    font-size: 2rem;
+  }
+  h1.card-title {
+    font-family: "Cabin", sans-serif;
+    font-size: 2rem;
+    font-weight: 200;
+    margin: auto;
+  }
+  .card-text {
+    display: none;
+  }
+  .card-text-brand {
+    display: none;
+  }
+  .card-text-ocean {
+    display: none;
+  }
+  .why {
+    margin-top: 5rem;
+    font-size: 3rem;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .learn-how-2 {
+    padding: 0.5rem 3.5rem;
+    margin-top: 5rem;
+    margin-bottom: 10rem;
+    background: #ff7c5c;
+    border: 0rem solid white;
+    color: white;
+    font-size: 2rem;
+    font-weight: 600;
+    border-radius: 4.3rem;
+    font-family: "Cabin", sans-serif;
+  }
+}
+
 .events-cabin-large {
   font-family: "Cabin", sans-serif;
   font-weight: 700;
@@ -328,6 +446,35 @@ nav ul {
   font-weight: 600;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
+}
+
+@media (width: 375px) {
+  .events-cabin-large {
+    font-family: "Cabin", sans-serif;
+    font-weight: 700;
+    font-size: 3rem;
+    margin-top: -20rem;
+  }
+  .events-cabin-small {
+    font-family: "Cabin", sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    margin-bottom: 2.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .learn-how-events {
+    padding: 0.5rem 2rem;
+    margin-top: -1.8rem;
+    margin-bottom: 20rem;
+    background: #ff7c5c;
+    border: 0rem solid white;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 600;
+    border-radius: 4.3rem;
+    font-family: "Cabin", sans-serif;
+  }
 }
 
 .intro-why {
