--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -4,9 +4,18 @@
   width: 75%;
   height: 217px;
   border-radius: 5.8rem;
-  margin-left: 12%;
-  margin-right: 12%;
+  // margin-left: 12%;
+  // margin-right: 12%;
+  margin: auto ;
   margin-top: 3rem;
+}
+
+.header-image-home {
+  min-height: 60vh;
+    background: url("../imgs/iggy.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .learn-how {
@@ -19,12 +28,18 @@
   font-weight: 400;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
+  z-index: 1;
+}
+
+.play-icon {
+  font-size: 80px;
 }
 
 .oceaneers-cabin-large {
   font-family: "Cabin", sans-serif;
   font-weight: 700;
   font-size: 6.5rem;
+  margin-top: 15rem;
 }
 
 .oceaneers-cabin-small {
@@ -202,4 +217,123 @@
   font-weight: 600;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
+}
+
+// iphone X
+@media (max-width: 540px) {
+  .learn-how {
+    padding: 0.5rem 2rem;
+    margin-top: -1.8rem;
+    font-size: 1.4rem;
+  }
+  
+  .homepage-color {
+    width: 80%;
+  }
+  .oceaneers-cabin-large {
+    font-weight: 700;
+    font-size: 4rem;
+    margin-top: 18rem;
+    // margin-top: -30rem;
+  }
+  .oceaneers-cabin-small {
+    font-weight: 400;
+    font-size: 2rem;
+  }
+
+  .play-icon {
+    font-size: 80px;
+  }
+  .oceaneers-cabin {
+    font-weight: 700;
+    font-size: 2.8rem;
+  }
+  .oceaneers-raleway {
+    font-size: 1.4rem;
+    margin-top: 1.5rem;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+  .our-purpose {
+    font-weight: 700;
+    margin-top: 5rem;
+    font-size: 3rem;
+  }
+  .our-purpose-text {
+    margin-top: 7rem;
+    font-size: 2rem;
+    margin-top: 1.5%;
+  }
+  .our-pillers-text {
+    font-weight: 700;
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 3%;
+  }
+  .accordion-home {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  
+  .accordion-body-title {
+    font-size: 1.8rem;
+    margin-top: -2rem;
+  }
+  
+  .accordion-body-home {
+    font-size: 1.6rem;
+    margin-top: -2.2rem;
+    // border-radius: 0rem, 0rem, 8rem, 8rem;
+  }
+  
+  .button-accordion-home {
+    font-size: 2rem;
+    border-radius: 4.3rem;
+    height: 4rem;
+  }
+  
+  .plus-icon {
+    font-size: 2.4rem;
+    right: 1.3rem;
+    font-size: 2rem;
+  }
+  // this stuff is not working 
+  h1.card-title {
+    font-family: "Cabin", sans-serif;
+    font-size: 2rem;
+    font-weight: 200;
+    margin: auto;
+  }
+  
+  .card-text {
+    display: none;
+  }
+  
+  .card-text-brand {
+    display: none;
+  }
+  
+  .card-text-ocean {
+    display: none;
+  }
+  .why {
+    margin-top: 5rem;
+    font-size: 3rem;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .learn-how-2 {
+    padding: 0.5rem 3.5rem;
+    margin-top: 5rem;
+    margin-bottom: 10rem;
+    background: #ff7c5c;
+    border: 0rem solid white;
+    color: white;
+    font-size: 2rem;
+    font-weight: 600;
+    border-radius: 4.3rem;
+    font-family: "Cabin", sans-serif;
+  }
 }
