--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -153,10 +153,44 @@
       top: 12rem;
       left: 2rem;
     }
+    .social-icons {
+      .instagram {
+        position: absolute;
+        top: 13rem;
+        left: 17rem;
+        padding: 1.1rem;
+      }
+      .facebook {
+        position: absolute;
+        left: 23rem;
+        padding: 1.1rem 1.8rem;
+      }
+    }
   }
   div.col-three {
     font-size: 1.8rem;
-    left: 23.9rem;
+    left: 17rem;
+  }
+  div.col-four {
+    button.footer-login {
+      position: absolute;
+      top: 9rem;
+      left: 36rem;
+      padding: 0.5rem 2rem;
+      font-size: 1.6rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+    button.footer-join {
+      position: absolute;
+      margin-top: 0rem;
+      top: 15rem;
+      right: 2rem;
+      font-size: 1.6rem;
+      padding: 0.5rem 2rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
   }
 }
 @media (min-width: 768px) {
