--- a/src/styles/_joinUs.scss
+++ b/src/styles/_joinUs.scss
@@ -1,133 +1,422 @@
-.repeating-h1-join {
-  font-family: "Cabin", sans-serif;
-  font-size: 4.5rem;
-  font-weight: 700;
-  color: #024a63;
-}
-.card-headers {
-  text-align: center;
-  font-family: "cabin", sans-serif;
-  font-size: 3rem;
-  font-weight: 500;
-  color: #024a63;
-  margin-bottom: 2.4rem;
-}
+@media (min-width: 500px) {
+  .repeating-h1-join {
+    font-family: "Cabin", sans-serif;
+    font-size: 4.5rem;
+    font-weight: 700;
+    color: #024a63;
+  }
+  .card-headers {
+    text-align: center;
+    font-family: "cabin", sans-serif;
+    font-size: 3rem;
+    font-weight: 500;
+    color: #024a63;
+    margin-bottom: 2.4rem;
+  }
+  // Form field
+  .form-field-card {
+    background: #bededf;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5rem;
+    border-radius: 4.3rem;
+    padding: 3.3rem 6.5rem 3.3rem 6.5rem;
+  }
+  .form-title-join {
+    font-family: "cabin", sans-serif;
+    font-size: 4rem;
+    font-weight: 600;
+    color: #024a63;
+  }
+  .form-subtitle-join {
+    font-family: "cabin", sans-serif;
+    font-size: 2.4rem;
+    font-weight: 400;
+    color: #024a63;
+    margin-bottom: 2.4rem;
+  }
 
-.form-field-card {
-  background: #bededf;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 5rem;
-  border-radius: 4.3rem;
-  padding: 3.3rem 6.5rem 3.3rem 6.5rem;
-}
-.form-title-join {
-  font-family: "cabin", sans-serif;
-  font-size: 4rem;
-  font-weight: 600;
-  color: #024a63;
-}
-.form-subtitle-join {
-  font-family: "cabin", sans-serif;
-  font-size: 2.4rem;
-  font-weight: 400;
-  color: #024a63;
-  margin-bottom: 2.4rem;
-}
+  .join-us-form-labels {
+    font-family: "Cabin", sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    color: #024a63;
+  }
+  // Inputs
+  input[type="text"] {
+    padding: 2rem;
+    font-size: 2rem;
+    font-family: "raleway", sans-serif;
+  }
+  input[type="email"] {
+    padding: 2rem;
+    font-size: 2rem;
+    font-family: "raleway", sans-serif;
+  }
+  input[type="number"] {
+    padding: 2rem;
+    font-size: 2rem;
+    font-family: "raleway", sans-serif;
+  }
+  textarea[type="text"] {
+    padding: 1rem;
+    font-size: 2rem;
+    font-family: "raleway", sans-serif;
+  }
+  .input-rows {
+    .left-col {
+      height: 4.4rem;
+      border-radius: 2rem;
+      border: none;
+      margin-bottom: 2.4rem;
+    }
+    .right-col {
+      height: 4.4rem;
+      border-radius: 2rem;
+      border: none;
+      margin-bottom: 2.4rem;
+    }
+  }
 
-.join-us-form-labels {
-  font-family: "Cabin", sans-serif;
-  font-weight: 400;
-  font-size: 2rem;
-  color: #024a63;
-}
-input[type="text"] {
-  padding: 2rem;
-  font-size: 2rem;
-  font-family: "raleway", sans-serif;
-}
-input[type="email"] {
-  padding: 2rem;
-  font-size: 2rem;
-  font-family: "raleway", sans-serif;
-}
-input[type="number"] {
-  padding: 2rem;
-  font-size: 2rem;
-  font-family: "raleway", sans-serif;
-}
-textarea[type="text"] {
-  padding: 1rem;
-  font-size: 2rem;
-  font-family: "raleway", sans-serif;
-}
-
-.two-column-left {
-  display: inline;
-  float: left;
-  .left-col {
-    width: 49.1rem;
+  .full-width {
+    float: left;
     height: 4.4rem;
     border-radius: 2rem;
     border: none;
     margin-bottom: 2.4rem;
   }
+
+  .join-us-form-checkboxes {
+    font-family: "Cabin", sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    color: #024a63;
+  }
+  .checkboxes {
+    margin-top: 5.6rem;
+  }
+  input.radio-button {
+    width: 2.4rem;
+    min-width: 2.4rem;
+    height: 2.4rem;
+    margin-right: 1rem;
+    margin-top: 0.5rem;
+    margin-left: 0rem;
+    border: none;
+  }
+  input.checkbox-join {
+    margin-top: 1rem;
+    width: 2rem;
+    min-width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    border: none;
+  }
+  button.sign-up-btn {
+    color: white;
+    margin-top: 4.5rem;
+    margin-bottom: 3.5rem;
+    background-color: #ff7c5c;
+    height: 4.4rem;
+    width: 25.6rem;
+    border-radius: 20px;
+    font-family: "Cabin", sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 2.4rem;
+    cursor: pointer;
+  }
+  div.joinus-image-left-col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    position: relative;
+    width: 50%;
+    max-width: 56.98rem;
+    margin-left: 10%;
+    margin-bottom: 5.37rem;
+
+    p.joinus-card-text {
+      position: absolute;
+      bottom: 1rem;
+      font-family: "Cabin", sans-serif;
+      font-size: 2rem;
+      font-weight: 600;
+      color: white;
+      margin-left: 4rem;
+      margin-right: 4rem;
+    }
+    .check-email-card3 {
+      position: absolute;
+      bottom: 4.7rem;
+      font-family: "Cabin", sans-serif;
+      font-weight: 600;
+      font-size: 2rem;
+      color: white;
+    }
+    .joinus-card-btn {
+      position: absolute;
+      bottom: 4.7rem;
+      background-color: #ff7c5c;
+      color: white;
+      font-size: 2rem;
+      font-family: "Cabin", sans-serif;
+      font-weight: 600;
+      padding: 1rem 1.6rem;
+      border-radius: 4.3rem;
+    }
+  }
+
+  .joinus-image-right-col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    position: relative;
+    width: 50%;
+    max-width: 56.98rem;
+    margin-right: 10%;
+    margin-bottom: 5.37rem;
+    .joinus-card-text {
+      position: absolute;
+      bottom: 14.6rem;
+      font-family: "Cabin", sans-serif;
+      font-size: 2rem;
+      font-weight: 600;
+      color: white;
+      margin-left: 4rem;
+      margin-right: 4rem;
+    }
+    .joinus-card-btn {
+      position: absolute;
+      background-color: #ff7c5c;
+      bottom: 4.7rem;
+      color: white;
+      font-size: 2rem;
+      font-family: "Cabin", sans-serif;
+      font-weight: 600;
+      padding: 1rem 1.6rem;
+      border-radius: 4.3rem;
+    }
+  }
 }
-.two-column-right {
-  display: inline;
-  float: right;
-  .right-col {
-    width: 49.1rem;
+@media (min-width: 1280px) {
+  .join-us-body {
+    font-family: "cabin", sans-serif;
+    font-size: 3rem;
+    font-weight: 400;
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    color: #024a63;
+    margin-bottom: 3rem;
+  }
+  .repeating-h1-join {
+    font-family: "Cabin", sans-serif;
+    font-size: 4.5rem;
+    font-weight: 700;
+    color: #024a63;
+    margin-bottom: 3rem;
+  }
+  .card-headers {
+    text-align: center;
+    font-family: "cabin", sans-serif;
+    font-size: 3rem;
+    font-weight: 500;
+    color: #024a63;
+    margin-bottom: 3.3rem;
+  }
+
+  div.joinus-image-left-col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    position: relative;
+    width: 50%;
+    max-width: 56.98rem;
+    margin-left: 10%;
+    margin-bottom: 5.37rem;
+
+    p.joinus-card-text {
+      position: absolute;
+      bottom: 14.6rem;
+      font-family: "Cabin", sans-serif;
+      font-size: 3.2rem;
+      font-weight: 600;
+      color: white;
+      margin-left: 4rem;
+      margin-right: 4rem;
+    }
+    .check-email-card3 {
+      position: absolute;
+      bottom: 4.7rem;
+      font-family: "Cabin", sans-serif;
+      font-weight: 600;
+      font-size: 2rem;
+      color: white;
+    }
+    .joinus-card-btn {
+      position: absolute;
+      bottom: 4.7rem;
+      background-color: #ff7c5c;
+      color: white;
+      font-size: 2rem;
+      font-family: "Cabin", sans-serif;
+      font-weight: 600;
+      padding: 1rem 1.6rem;
+      border-radius: 4.3rem;
+    }
+  }
+
+  .joinus-image-right-col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    position: relative;
+    width: 50%;
+    max-width: 56.98rem;
+    margin-right: 10%;
+    margin-bottom: 5.37rem;
+    .joinus-card-text {
+      position: absolute;
+      bottom: 14.6rem;
+      font-family: "Cabin", sans-serif;
+      font-size: 3.2rem;
+      font-weight: 600;
+      color: white;
+      margin-left: 4rem;
+      margin-right: 4rem;
+    }
+    .joinus-card-btn {
+      position: absolute;
+      background-color: #ff7c5c;
+      bottom: 4.7rem;
+      color: white;
+      font-size: 2rem;
+      font-family: "Cabin", sans-serif;
+      font-weight: 600;
+      padding: 1rem 1.6rem;
+      border-radius: 4.3rem;
+    }
+  }
+
+  // Form field
+
+  .form-field-card {
+    background: #bededf;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5rem;
+    border-radius: 4.3rem;
+    padding: 3.3rem 6.5rem 3.3rem 6.5rem;
+  }
+  .form-title-join {
+    font-family: "cabin", sans-serif;
+    font-size: 4rem;
+    font-weight: 600;
+    color: #024a63;
+  }
+  .form-subtitle-join {
+    font-family: "cabin", sans-serif;
+    font-size: 2.4rem;
+    font-weight: 400;
+    color: #024a63;
+    margin-bottom: 2.4rem;
+  }
+
+  .join-us-form-labels {
+    font-family: "Cabin", sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    color: #024a63;
+  }
+  // Inputs
+  input[type="text"] {
+    padding: 2rem;
+    font-size: 2rem;
+    font-family: "raleway", sans-serif;
+  }
+  input[type="email"] {
+    padding: 2rem;
+    font-size: 2rem;
+    font-family: "raleway", sans-serif;
+  }
+  input[type="number"] {
+    padding: 2rem;
+    font-size: 2rem;
+    font-family: "raleway", sans-serif;
+  }
+  textarea[type="text"] {
+    padding: 1rem;
+    font-size: 2rem;
+    font-family: "raleway", sans-serif;
+  }
+  .input-rows {
+    .left-col {
+      height: 4.4rem;
+      border-radius: 2rem;
+      border: none;
+      margin-bottom: 2.4rem;
+    }
+    .right-col {
+      height: 4.4rem;
+      border-radius: 2rem;
+      border: none;
+      margin-bottom: 2.4rem;
+    }
+  }
+
+  .full-width {
+    float: left;
     height: 4.4rem;
     border-radius: 2rem;
     border: none;
     margin-bottom: 2.4rem;
   }
-}
 
-.full-width {
-  float: left;
-  height: 4.4rem;
-  border-radius: 2rem;
-  border: none;
-  margin-bottom: 2.4rem;
-}
-
-.join-us-form-checkboxes {
-  font-family: "Cabin", sans-serif;
-  font-weight: 400;
-  font-size: 2rem;
-  color: #024a63;
-}
-.checkboxes {
-  margin-top: 5.6rem;
-}
-input.radio-button {
-  width: 2.4rem;
-  height: 2.4rem;
-  margin-right: 1rem;
-  margin-top: 0.5rem;
-  margin-left: 0rem;
-  border: none;
-}
-input.checkbox-join {
-  margin-top: 1rem;
-  width: 2.4rem;
-  height: 2.4rem;
-  margin-right: 1rem;
-  border: none;
-}
-button.sign-up-btn {
-  color: white;
-  margin-top: 4.5rem;
-  margin-bottom: 3.5rem;
-  background-color: #ff7c5c;
-  height: 4.4rem;
-  width: 25.6rem;
-  border-radius: 20px;
-  font-family: "Cabin", sans-serif;
-  font-size: 2rem;
-  font-weight: 600;
-  line-height: 2.4rem;
-  cursor: pointer;
+  .join-us-form-checkboxes {
+    font-family: "Cabin", sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    color: #024a63;
+  }
+  .checkboxes {
+    margin-top: 5.6rem;
+  }
+  input.radio-button {
+    width: 2.4rem;
+    height: 2.4rem;
+    margin-right: 1rem;
+    margin-top: 0.5rem;
+    margin-left: 0rem;
+    border: none;
+  }
+  input.checkbox-join {
+    margin-top: 1rem;
+    width: 2.4rem;
+    height: 2.4rem;
+    margin-right: 1rem;
+    border: none;
+  }
+  button.sign-up-btn {
+    color: white;
+    margin-top: 4.5rem;
+    margin-bottom: 3.5rem;
+    background-color: #ff7c5c;
+    height: 4.4rem;
+    width: 25.6rem;
+    border-radius: 20px;
+    font-family: "Cabin", sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 2.4rem;
+    cursor: pointer;
+  }
 }
