--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -181,6 +181,9 @@
       margin-bottom: 5rem;
     }
   }
+  button.learn-how-partners {
+    padding: 1rem 3.5rem;
+  }
   h3.quote {
     font-size: 2.6rem;
     margin-top: 2.7rem;
@@ -287,6 +290,7 @@
     font-size: 2rem;
     height: 5rem;
     margin-top: -2.5rem;
+    padding: 1rem 3.5rem;
   }
   h3.quote {
     font-size: 2.6rem;
@@ -433,6 +437,9 @@
       margin: 2rem 9.5rem 11.3rem 9.5rem;
     }
   }
+  button.learn-how-partners {
+    padding: 1rem 3.5rem;
+  }
   h2.repeating-h2 {
     margin-left: 10rem;
     margin-right: 10rem;
@@ -572,7 +579,7 @@
 
   // ORANGE BUTTON
   button.learn-how-partners {
-    padding: 0.5rem 3.5rem;
+    padding: 1rem 3.5rem;
     margin-top: -2rem;
     background: #ff7c5c;
     border: 0rem solid white;
