added header image and bottom accordian to Join us

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -32,8 +32,9 @@
 }
 
 .play-icon {
-  font-size: 80px;
-  width: 20rem;
+  font-size: 200rem;
+ 
+  // width: 20rem;
 }
 
 .oceaneers-cabin-large {
