--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -9,14 +9,14 @@
   font-family: "Cabin", sans-serif;
   font-weight: 700;
   font-size: 6.5rem;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .events-cabin-small {
   font-family: "Cabin", sans-serif;
   font-weight: 400;
   font-size: 3rem;
-  margin-bottom: 2.5rem;
+  margin-bottom: 5%;
   margin-left: 8%;
   margin-right: 8%;
 }
