--- a/src/styles/_joinUs.scss
+++ b/src/styles/_joinUs.scss
@@ -204,6 +204,27 @@
   }
 }
 @media (min-width: 1280px) {
+  .header-image-joinus {
+    min-height: 60vh;
+      background: url("../imgs/Joinus/headerimage.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+  }
+  .joinus-cabin-large {
+    font-family: "Cabin", sans-serif;
+    font-weight: 700;
+    font-size: 6.5rem;
+    margin-top: 15rem;
+  }
+
+  .joinus-cabin-small {
+  font-family: "Cabin", sans-serif;
+  font-weight: 400;
+  font-size: 3rem;
+  margin-bottom: 10%;
+
+  }
   .join-us-body {
     font-family: "cabin", sans-serif;
     font-size: 3rem;
@@ -213,6 +234,7 @@
     margin-right: 10%;
     color: #024a63;
     margin-bottom: 3rem;
+    margin-top: 4%;
   }
   .repeating-h1-join {
     font-family: "Cabin", sans-serif;
@@ -419,4 +441,89 @@
     line-height: 2.4rem;
     cursor: pointer;
   }
+  .reduce-title {
+  color: #024a63;
+  font-family: "Cabin", sans-serif;
+  font-weight: 700;
+  margin-top: 7rem;
+  font-size: 4.5rem;
+  text-align: center;
+  background-color: white;
+
+  }
+  .reduce-text {
+  color: #024a63;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  margin-top: 80px;
+  text-align: center;
+  font-size: 2.5rem;
+  margin-top: 1.5%;
+  margin-left: 1%;
+  margin-right: 1%;
+  background-color: white;
+  }
+
+  .accordion-joinus {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+  
+  .accordion-body-title-joinus {
+    font-family: "Raleway", sans-serif;
+    font-size: 2.3rem;
+    font-weight: 300;
+    border: none;
+    text-align: center;
+    margin-top: -2.5rem;
+    margin-bottom: 2rem;
+    background-color: #024a63;
+    border-radius: 0rem 0rem 0rem 0rem;
+    padding-top: 3rem;
+    margin-left: 12%;
+    margin-right: 12%;
+    width: 80%;
+    color: white;
+  }
+  
+  .accordion-body-joinus {
+    font-family: "Raleway", sans-serif;
+    font-size: 2.3rem;
+    font-weight: 300;
+    border: none;
+    margin-left: 12%;
+    margin-right: 12%;
+    width: 80%;
+    background-color: #024a63;
+    color: white;
+    border-radius: 0rem 0rem 4.3rem 4.3rem;
+    margin-top: -2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  
+  .button-accordion-joinus {
+    font-family: "Cabin", sans-serif;
+    position: relative;
+    font-size: 2.5rem;
+    font-weight: 300;
+    border: none;
+    background-color: #024a63;
+    border-radius: 4.3rem;
+    color: white;
+    width: 80%;
+    height: 6rem;
+    margin-left: 12%;
+    margin-right: 12%;
+    text-align: center;
+  }
+  
+  .plus-icon-joinus {
+    position: absolute;
+    font-size: 2.4rem;
+    right: 3rem;
+    font-size: 2.5rem;
+  }
+
+
 }
