--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -166,25 +166,29 @@ a {
 }
 
 .nav-link {
+  margin-left: 2rem;
+  margin-right: 2rem;
   font-size: 2rem !important;
 }
 
 .join {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.5rem;
   background: #ff7c5c;
   border: 0rem solid white;
   color: white;
-  font-size: 1.6rem;
+  font-size: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   border-radius: 2.4rem;
   font-family: "Cabin", sans-serif;
 }
 
 .login {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.5rem;
   background: #ff7c5c;
   border: 0rem solid white;
   color: white;
-  font-size: 1.6rem; /* 16 px */
+  font-size: 2rem; /* 16 px */
   border-radius: 2.4rem;
   font-family: "Cabin", sans-serif;
 }
@@ -193,5 +197,20 @@ a {
   .join,
   .login {
     margin: 1rem 1rem;
+  }
+}
+
+@media screen and (min-width: 994px) and (mac-width: 1150px) {
+  .nav-link {
+    font-size: 1.5rem !important;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  nav {
+    img {
+      width: 15px !important;
+      height: 15px !important;
+    }
   }
 }
