--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -31,8 +31,9 @@
   z-index: 1;
 }
 
-.play-icon {
-  font-size: 80px;
+.bi-play-circle {
+  font-size: 60px;
+  margin-top: -2.5rem;
 }
 
 .oceaneers-cabin-large {
