--- a/src/styles/_why.scss
+++ b/src/styles/_why.scss
@@ -298,7 +298,7 @@
 
 @media screen and (max-width: 768px) {
   .compare {
-    .sub-title-why {
+    p .sub-title-why {
       font-size: 3.5rem !important;
     }
 
